# gali

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  README.md  com.github.geoffreycoulaud.gali.json  com.github.geoffreycoulaud.gali.yml  config2obj.js  games.js  library.js  list-lutris-games.js  list-steam-games.js  main.js  meson.build  package-lock.json  package.json  python3-defusedxml.json  python3-pyyaml.json  utils.js  view.js  webpack.config.js
gali/: gali.gresource.xml  gali.in  game_wrapper_process.py  launcher.py  library.py  main.py  meson.build  singletons.py  window.py  window.ui
gali/data/: com.github.geoffreycoulaud.gali.gschema.xml  meson.build
gali/games/: cemu_game.py  citra_game.py  desktop_game.py  dolphin_game.py  emulation_game.py  game.py  heroic_game.py  itch_game.py  legendary_game.py  lutris_game.py  ppsspp_game.py  retroarch_game.py  steam_game.py  yuzu_game.py
gali/po/: meson.build
gali/processes/: citra_process.py  process.py
gali/sources/: abc_cli_startup_chain.py  abc_emulation_game.py  abc_emulation_source.py  abc_file_dependent_scannable.py  abc_game.py  abc_generic_game.py  abc_scannable.py  abc_script_startup_chain.py  abc_source.py  abc_startable.py  abc_startup_chain.py  abc_stemmed_cli_startup_chain.py  all_sources.py  base_game.py  cemu_source.py  citra_source.py  cli_startup_chain.py  dependency.py  desktop_source.py  dolphin_source.py  emulation_game.py  emulation_source.py  file_dependent_scannable.py  file_dependent_source.py  game.py  game_dir.py  generic_game.py  heroic_source.py  itch_source.py  legendary_source.py  lutris_source.py  ppsspp_source.py  retroarch_source.py  scannable.py  script_startup_chain.py  shell_command_startup_chain.py  shell_script_startup_chain.py  source.py  startable.py  startup_chain.py  (+3 more)
gali/src/: gali.in  game_wrapper_process.py  launcher.py  meson.build
gali/templates/: window.ui
gali/ui/: about_dialog.py  application.py  application_window.py  games_view.py  (+13 more)
(+503 files in other folders)
