install_data(
	[
		'scalable/com.github.geoffreycoulaud.gali.svg',
		# TODO enable when we have a dev version
		#'scalable/com.github.geoffreycoulaud.gali.Devel.svg',
	],
	install_dir: datadir / 'icons/hicolor/scalable/apps',
)

# TODO enable when we have a symbolic variant
# install_data(
# 	[
# 		'symbolic/com.github.geoffreycoulaud.gali-symbolic.svg',
# 	]
# 	install_dir: datadir / 'icons/hicolor/symbolic/apps',
# )